--- a/Flask.ipynb
+++ b/Flask.ipynb
@@ -22,20 +22,9 @@
      "output_type": "stream",
      "text": [
       " * Running on http://127.0.0.1:5000 (Press CTRL+C to quit)\n",
-      "127.0.0.1 - - [22/Sep/2022 02:05:12] \"GET / HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [22/Sep/2022 02:05:12] \"GET /favicon.ico HTTP/1.1\" 404 -\n",
-      "127.0.0.1 - - [22/Sep/2022 02:05:27] \"POST /predict HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [22/Sep/2022 02:05:36] \"GET / HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [22/Sep/2022 02:05:47] \"POST /predict HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [22/Sep/2022 02:05:53] \"GET / HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [22/Sep/2022 02:06:10] \"POST /predict HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [22/Sep/2022 02:06:18] \"GET / HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [22/Sep/2022 02:06:47] \"POST /predict HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [22/Sep/2022 02:06:51] \"GET / HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [22/Sep/2022 02:07:37] \"GET / HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [22/Sep/2022 02:07:58] \"POST /predict HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [22/Sep/2022 02:08:04] \"GET / HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [22/Sep/2022 02:08:35] \"POST /predict HTTP/1.1\" 200 -\n"
+      "127.0.0.1 - - [10/Oct/2022 17:26:16] \"GET / HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [10/Oct/2022 17:26:21] \"POST /predict HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [10/Oct/2022 17:26:35] \"GET / HTTP/1.1\" 200 -\n"
      ]
     }
    ],
@@ -75,7 +64,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1ac664e5",
+   "id": "d5e163f9",
    "metadata": {},
    "outputs": [],
    "source": []
