--- a/Flask.ipynb
+++ b/Flask.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "b06e8bb1",
    "metadata": {},
    "outputs": [
@@ -10,21 +10,55 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " * Serving Flask app '__main__' (lazy loading)\n",
-      " * Environment: production\n",
-      "\u001b[31m   WARNING: This is a development server. Do not use it in a production deployment.\u001b[0m\n",
-      "\u001b[2m   Use a production WSGI server instead.\u001b[0m\n",
-      " * Debug mode: off\n"
+      " * Serving Flask app '__main__'\n",
+      " * Debug mode: on\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " * Running on http://127.0.0.1:5000 (Press CTRL+C to quit)\n",
-      "127.0.0.1 - - [10/Oct/2022 17:26:16] \"GET / HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [10/Oct/2022 17:26:21] \"POST /predict HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [10/Oct/2022 17:26:35] \"GET / HTTP/1.1\" 200 -\n"
+      "\u001b[31m\u001b[1mWARNING: This is a development server. Do not use it in a production deployment. Use a production WSGI server instead.\u001b[0m\n",
+      " * Running on http://localhost:3000\n",
+      "\u001b[33mPress CTRL+C to quit\u001b[0m\n",
+      " * Restarting with stat\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/usr/lib/python3.10/site-packages/ipykernel_launcher.py\", line 17, in <module>\n",
+      "    app.launch_new_instance()\n",
+      "  File \"/usr/lib/python3.10/site-packages/traitlets/config/application.py\", line 981, in launch_instance\n",
+      "    app.initialize(argv)\n",
+      "  File \"/usr/lib/python3.10/site-packages/traitlets/config/application.py\", line 110, in inner\n",
+      "    return method(app, *args, **kwargs)\n",
+      "  File \"/usr/lib/python3.10/site-packages/ipykernel/kernelapp.py\", line 666, in initialize\n",
+      "    self.init_sockets()\n",
+      "  File \"/usr/lib/python3.10/site-packages/ipykernel/kernelapp.py\", line 307, in init_sockets\n",
+      "    self.shell_port = self._bind_socket(self.shell_socket, self.shell_port)\n",
+      "  File \"/usr/lib/python3.10/site-packages/ipykernel/kernelapp.py\", line 244, in _bind_socket\n",
+      "    return self._try_bind_socket(s, port)\n",
+      "  File \"/usr/lib/python3.10/site-packages/ipykernel/kernelapp.py\", line 220, in _try_bind_socket\n",
+      "    s.bind(\"tcp://%s:%i\" % (self.ip, port))\n",
+      "  File \"/usr/lib/python3.10/site-packages/zmq/sugar/socket.py\", line 232, in bind\n",
+      "    super().bind(addr)\n",
+      "  File \"zmq/backend/cython/socket.pyx\", line 568, in zmq.backend.cython.socket.Socket.bind\n",
+      "  File \"zmq/backend/cython/checkrc.pxd\", line 28, in zmq.backend.cython.checkrc._check_rc\n",
+      "zmq.error.ZMQError: Address already in use\n"
+     ]
+    },
+    {
+     "ename": "SystemExit",
+     "evalue": "1",
+     "output_type": "error",
+     "traceback": [
+      "An exception has occurred, use %tb to see the full traceback.\n",
+      "\u001b[0;31mSystemExit\u001b[0m\u001b[0;31m:\u001b[0m 1\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/lib/python3.10/site-packages/IPython/core/interactiveshell.py:3441: UserWarning: To exit: use 'exit', 'quit', or Ctrl-D.\n",
+      "  warn(\"To exit: use 'exit', 'quit', or Ctrl-D.\", stacklevel=1)\n"
      ]
     }
    ],
@@ -58,7 +92,7 @@
     "    return render_template('result.html',prediction = my_prediction)\n",
     "\n",
     "if __name__ == \"__main__\":\n",
-    "    app.run()"
+    "    app.run(host=\"localhost\", port=3000,debug=True)"
    ]
   },
   {
@@ -72,7 +106,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -86,7 +120,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5"
+   "version": "3.10.8"
   }
  },
  "nbformat": 4,
